--- a/projects-review/playbook.yml
+++ b/projects-review/playbook.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install and configure web service
-  gather_facts: no
+  gather_facts: yes
   hosts:
     - serverc.lab.example.com
     - serverd.lab.example.com
