--- a/projects-review/playbook.yml
+++ b/projects-review/playbook.yml
@@ -10,17 +10,17 @@
     - name: Ver los facts
       debug:
         var: ansible_facts
-
-    - name: Install apache
+  
+    - name: Install {{ servidor }}
       yum:
-        name: apache2
+        name: "{{ servidor }}"
         state: latest
 
-    - name: Enable and start apache
+    - name: "{{ estado }} {{ servidor }}"
       service:
-        name: apache2
+        name: "{{ servidor }}"
         enabled: true
-        state: started
+        state: "{{ estado }}"
   
     - name: Install firewalld
       yum:
@@ -31,10 +31,10 @@
       service:
         name: firewalld
         enabled: true
-        state: started
+        state: started  
         
   handlers:
-    - name: restart apache
+    - name: restart {{ servidor }}
       service:
-        name: apache2
+        name: "{{ servidor }}"
         state: restarted
